# ScrapegoatSDK

./: .gitignore  main.py  pyproject.toml  requirements.txt
goatspeak-language-support/: package.json
goatspeak-language-support/server/src/: server.ts
goatspeak-language-support/syntaxes/: goat.tmLanguage.json
scrapegoat/: pyproject.toml
scrapegoat-core/: pyproject.toml
scrapegoat-core/src/scrapegoat/: __init__.py
scrapegoat-core/src/scrapegoat/classes/: __init__.py  sheepdog.py
scrapegoat-loom/: LICENSE  README.md  pyproject.toml  requirements.txt
scrapegoat-loom/src/scrapegoat_loom/: __init__.py
scrapegoat-loom/src/scrapegoat_loom/classes/: __init__.py  loom.py
scrapegoat-loom/src/scrapegoat_loom/gui-styles/: tapestry.tcss
scrapegoat/src/scrapegoat/classes/: sheepdog.py
src/scrapegoat/: __init__.py  main.py
src/scrapegoat/classes/: __init__.py  block.py  command.py  gardener.py  goat.py  html_node.py  interpreter.py  loom.py  milkmaid.py  milkman.py  sheepdog.py  shepherd.py  thistle.py  thistle_interpreter.py
src/scrapegoat/gui-styles/: tapestry.tcss
